--- a/JeerowayWiki.Client/Shared/NavMenu.razor
+++ b/JeerowayWiki.Client/Shared/NavMenu.razor
@@ -12,11 +12,12 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
-        @*<li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="turntable">
+                <span class="oi oi-clock" aria-hidden="true"></span> TurnTable
             </NavLink>
         </li>
+        @*
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
