--- a/Web/ClientApp/src/app/home/home.component.html
+++ b/Web/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h1>АСУ</h1>
+<h1>Проект гусеничного робота Jeeroway</h1>
 
 <div *ngIf="service.isAuth">
   <p>Добро пожаловать, {{service.User.userName}} <a [routerLink]='["/"]' (click)="logOut()">[Выход]</a></p>
