--- a/JeerowayWiki.Client/Shared/NavMenu.razor
+++ b/JeerowayWiki.Client/Shared/NavMenu.razor
@@ -13,15 +13,14 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="overview">
+                <span class="oi oi-eye" aria-hidden="true"></span> Overview
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="turntable">
                 <span class="oi oi-clock" aria-hidden="true"></span> TurnTable
             </NavLink>
         </li>
-        @*
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>*@
     </ul>
 </div>
