add rpi install page

--- a/JeerowayWiki.Client/Pages/Home.razor
+++ b/JeerowayWiki.Client/Pages/Home.razor
@@ -5,14 +5,16 @@
 <p>
     Всем привет,<br />
     На этом ресурсе представлено описание проекта, а так же детальные инструкции (с картинками) по самостоятельной сборке<br />
-    (официальная группа вк)<br />
-    (помощь проекту)<br />
+    (<a href="http://jeeroway.ru" target="_blank">Основной сайт (с ламповым чатиком), через который можно управлять роботом</a>)<br />
+    (<a href="http://wiki.jeeroway.ru" target="_blank">Вики проект, инструкция по сборке</a>)<br />
+    (<a href="https://vk.com/jeeroway" target="_blank">Официальная группа вк</a>)<br />
+    (помощь проекту мне в личку)<br />
     (пожелания и предложения можно <a href="mailto:phoenix_net@@bk.ru">отправить на почту</a>)
 </p>
 
 <div class="alert alert-secondary mt-4" role="alert">
     <span class="oi oi-pencil mr-2" aria-hidden="true"></span>
-    Вы можете не только добавить добавить сайт в избранное, но и скачать его для оффлайн использования прямо из строки браузера
+    Вы можете не только добавить добавить сайт в избранное, но и скачать его для оффлайн использования прямо из строки браузера (доступно через https)
     <img src="/img/home/install.png" />
 </div>
 
