--- a/JeerowayWiki.Client/Shared/NavMenu.razor
+++ b/JeerowayWiki.Client/Shared/NavMenu.razor
@@ -18,6 +18,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="rpiinstall">
+                <span class="oi oi-terminal" aria-hidden="true"></span> Rpi Install
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="turntable">
                 <span class="oi oi-clock" aria-hidden="true"></span> TurnTable
             </NavLink>
