--- a/JeerowayWiki.Client/Shared/SurveyPrompt.razor
+++ b/JeerowayWiki.Client/Shared/SurveyPrompt.razor
@@ -1,16 +1,12 @@
 ﻿<div class="alert alert-secondary mt-4" role="alert">
-    <span class="oi oi-pencil mr-2" aria-hidden="true"></span>
-    <strong>@Title</strong>
-
-    <span class="text-nowrap">
-        Please take our
-        <a target="_blank" class="font-weight-bold" href="https://go.microsoft.com/fwlink/?linkid=2137916">brief survey</a>
-    </span>
-    and tell us what you think.
+    <span style="font-size: 14px;">// @Title</span><br />
+    <span class="oi oi-terminal mr-2" aria-hidden="true"></span>
+    @Text
 </div>
 
 @code {
-    // Demonstrates how a parent component can supply parameters
     [Parameter]
     public string Title { get; set; }
+    [Parameter]
+    public string Text { get; set; }
 }
