--- a/JeerowayWiki.Client/Shared/NavMenu.razor
+++ b/JeerowayWiki.Client/Shared/NavMenu.razor
@@ -27,5 +27,10 @@
                 <span class="oi oi-clock" aria-hidden="true"></span> TurnTable
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="power">
+                <span class="oi oi-pulse" aria-hidden="true"></span> Power
+            </NavLink>
+        </li>
     </ul>
 </div>
