--- a/JeerowayWiki.Client/Pages/Power.razor
+++ b/JeerowayWiki.Client/Pages/Power.razor
@@ -104,7 +104,7 @@
         Нам необходимо с одного аккумулятора запитать две платы, на моторы и на сервоприводы. На этих платах у нас стоят клеммы (втыкаются голые провода)<br />
         Соответственно, докупаем разъём "папа XT60", бывают сразу с припаянными проводами (сейчас нет в наличии), либо продаются парой без проводов. Цены от 120 до 190 рублей в рознице. <a href="https://rc-today.ru/product/akkumulyator-vant-li-po-74v-7600-mah-50c-2s-vtb50c76-2s/" target="_blank">Например</a><br />
         <br /><h5>Последнее, зарядное устройство:</h5>
-        Второй разъём-выход на аккумуляторе Deans (T-Plug), он используется для зарядки. Дополнительно видем в характеристиках величину 2S (количество элементов) и тип LiPo.<br />
+        Второй разъём-выход на аккумуляторе Deans (T-Plug), он используется для зарядки. Дополнительно видим в характеристиках величину 2S (количество элементов) и тип LiPo.<br />
         Под эти характеристики можем выбрать любой бюджетный вариант из зарядок (700-900р). Можем взять более расширенный набор с прицелом на будущее.<br />
         Мне консультант из магазина впарил <a href="https://rc-today.ru/product/universalnoe-zaryadnoe-ustroystvo-gtpower-c607d-7a-80w-gtp-c607d/" target="_blank">Универсальное зарядное устройство G.T.POWER C607D</a> за 2650 рублей.
     </div>
