Робот поехал. Добавлена страница управления. Добавлен сигнал-р хаб для связи

--- a/Web/ClientApp/src/app/robo-management/list/robo-list.component.html
+++ b/Web/ClientApp/src/app/robo-management/list/robo-list.component.html
@@ -14,6 +14,7 @@
         <th></th>
         <th></th>
         <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -23,6 +24,11 @@
         <td style="width:80px;">
           <a [routerLink]="['/robo/edit', robot.id]">
             <input type="submit" value="Edit" class="btn btn-primary">
+          </a>
+        </td>
+        <td style="width:80px;">
+          <a [routerLink]="['/robo/control', robot.id]">
+            <input type="submit" value="Рулить" class="btn btn-info">
           </a>
         </td>
         <td style="width:80px;">
