--- a/Web/ClientApp/src/app/shared/nav/menu/menu.component.html
+++ b/Web/ClientApp/src/app/shared/nav/menu/menu.component.html
@@ -11,6 +11,9 @@
     <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]="{ exact: false }">
       <a [routerLink]='["/rolemanagement"]'>Role Management</a>
     </li>
+    <li [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]="{ exact: false }">
+      <a [routerLink]='["/robo"]'>Robotics</a>
+    </li>
   </ul>
 
 </nav>
