--- a/JeerowayWiki.Client/Shared/NavMenu.razor
+++ b/JeerowayWiki.Client/Shared/NavMenu.razor
@@ -29,7 +29,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="power">
-                <span class="oi oi-pulse" aria-hidden="true"></span> Power
+                <span class="oi oi-battery-empty" aria-hidden="true"></span> Power
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="rxtx">
+                <span class="oi oi-pulse" aria-hidden="true"></span> RxTx
             </NavLink>
         </li>
     </ul>
