fix version fix video

--- a/JeerowayWiki.Client/Pages/RxTx.razor
+++ b/JeerowayWiki.Client/Pages/RxTx.razor
@@ -44,7 +44,7 @@
         Когда вы соединяете два устройства между собой, пин Tx должен входить в Rx, а пин Rx, соответственно, в Tx другого устройства.
         Так же необходимо не забывать, что земля должна быть соединена между устройствами.<br />
         Подробнее про последовательный порт рассказано вот в этом видео:<br />
-        <iframe width="560" height="315" src="https://youtu.be/yvre1qubwW4" title="YouTube serial instruction" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br /><br />
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/yvre1qubwW4" title="YouTube serial instruction" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br /><br />
         В Искре на пинах 0 и 1 располагается Serial3, в программе будем работать с этим объектом.<br />
         Итак, чтобы соединить две платы правильно, нам нужно знать распиновку на обоих платах. Для малины вот такая картина:<br />
         <img class="preview" src="@Environments.ImgHref("/Img/View/4/534ff207-346d-429d-4bf9-08d934e8ec2b")" /><br />
