--- a/src/Jeeroway.Web/web/src/shared/enums-icon/enums-icon-type/enums-icon-type.component.html
+++ b/src/Jeeroway.Web/web/src/shared/enums-icon/enums-icon-type/enums-icon-type.component.html
@@ -1,6 +1,6 @@
 <app-fa-icon
-             [src]="src"
-             [color]="color"
+             [src]="src()"
+             [color]="color()"
              data-toggle="tooltip"
-             [title]="tooltipTxt">
+             [title]="tooltipTxt()">
 </app-fa-icon>
