--- a/src/Jeeroway.Web/web/src/app/robo-management/control/robo-control.component.html
+++ b/src/Jeeroway.Web/web/src/app/robo-management/control/robo-control.component.html
@@ -6,20 +6,20 @@
   <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4">
-      <div class="btn btn-info" [class.active]="buttonState().w" (mouseup)="pushTheButton('')" (mousedown)="pushTheButton('w')">Go</div>
+      <div class="btn btn-info" [class.active]="buttonState().w" (mouseup)="pushTheButton('w', false)" (mousedown)="pushTheButton('w', true)">Go</div>
     </div>
     <div class="col-md-4"></div>
   </div>
 
   <div class="row">
     <div class="col-md-4">
-      <a class="btn btn-info" [class.active]="buttonState().a" (mouseup)="pushTheButton('')" (mousedown)="pushTheButton('a')"><</a>
+      <a class="btn btn-info" [class.active]="buttonState().a" (mouseup)="pushTheButton('a', false)" (mousedown)="pushTheButton('a', true)"><</a>
     </div>
     <div class="col-md-4">
-      <a class="btn btn-info" [class.active]="buttonState().s" (mouseup)="pushTheButton('')" (mousedown)="pushTheButton('s')">|</a>
+      <a class="btn btn-info" [class.active]="buttonState().s" (mouseup)="pushTheButton('s', false)" (mousedown)="pushTheButton('s', true)">|</a>
     </div>
     <div class="col-md-4">
-      <a class="btn btn-info" [class.active]="buttonState().d" (mouseup)="pushTheButton('')" (mousedown)="pushTheButton('d')">></a>
+      <a class="btn btn-info" [class.active]="buttonState().d" (mouseup)="pushTheButton('d', false)" (mousedown)="pushTheButton('d', true)">></a>
     </div>
   </div>
 </div>
