--- a/src/JeerowayWiki.Images/Views/Shared/_LeftMenu.cshtml
+++ b/src/JeerowayWiki.Images/Views/Shared/_LeftMenu.cshtml
@@ -11,44 +11,26 @@
                 Home
             </a>
         </li>
-        @*<li>
-                <a href="/Auth/Register" class="nav-link @(ViewContext.RouteData.Values["controller"].ToString().ToLower()=="auth" ? "active" : "text-white")">
-                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
-                    Register
-                </a>
-            </li>*@
 
         <li>
-            <a href="/Albums/Wiki" class="nav-link @(ViewContext.RouteData.Values["controller"].ToString().ToLower()=="albums" ? "active" : "text-white")">
+            <a href="/Albums" class="nav-link @(ViewContext.RouteData.Values["controller"].ToString().ToLower()=="albums" ? "active" : "text-white")">
                 <i class="bi-image"></i>
-                Albums Wiki
+                Albums
             </a>
         </li>
-        @*<li>
-                <a href="#" class="nav-link text-white">
-                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
-                    Products
-                </a>
-            </li>
-            <li>
-                <a href="#" class="nav-link text-white">
-                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
-                    Customers
-                </a>
-            </li>*@
     </ul>
     <hr>
     @*<div class="dropdown">
-            <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle me-2">
-                <strong>mdo</strong>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-                <li><a class="dropdown-item" href="#">New project...</a></li>
-                <li><a class="dropdown-item" href="#">Settings</a></li>
-                <li><a class="dropdown-item" href="#">Profile</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Sign out</a></li>
-            </ul>
-        </div>*@
+        <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle me-2">
+            <strong>mdo</strong>
+        </a>
+        <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
+            <li><a class="dropdown-item" href="#">New project...</a></li>
+            <li><a class="dropdown-item" href="#">Settings</a></li>
+            <li><a class="dropdown-item" href="#">Profile</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Sign out</a></li>
+        </ul>
+    </div>*@
 </div>
