add wiki content, add action publish-angular.yml

--- a/src/Jeeroway.Web/web/src/app/home/home.component.html
+++ b/src/Jeeroway.Web/web/src/app/home/home.component.html
@@ -1,34 +1,92 @@
 <div class="home-wrapper">
   <h1>Робо улей</h1>
 
-  @if (service.isAuth) {
-    <p>
-      Добро пожаловать, {{ service.User?.userName }}
-      <a [routerLink]="['/']" (click)="logOut()">[Выход]</a>
-    </p>
-    <p>Хорошего дня</p>
-  } @else {
-    <p>Добро пожаловать.</p>
-    <ul>
-      <li><a [routerLink]="['/login']">Войдите</a></li>
-      <li>или <a [routerLink]="['/register']">Зарегистрируйтесь</a></li>
-    </ul>
-  }
+  <div class="alert alert-secondary mt-4" role="alert">
+    <span class="oi oi-pencil mr-2" aria-hidden="true"></span>
+    @if (service.isAuth) {
+      <p>
+        Добро пожаловать, {{ service.User?.userName }}
+        <a [routerLink]="['/']" (click)="logOut()">[Выход]</a>
+      </p>
+      <p>Хорошего дня</p>
+    } @else {
+      <p>Добро пожаловать.</p>
+      <ul>
+        <li><a [routerLink]="['/login']">Войдите</a></li>
+        <li>или <a [routerLink]="['/register']">Зарегистрируйтесь</a></li>
+      </ul>
+    }
+  </div>
 
   <section>
-    <div>Мы строим роботов</div>
+    <div>Всем привет, мы строим роботов</div>
     <div>
       Jeeroway - робот первого поколения. Это гусеничная платформа с рукой-манипулятором.
       На данном этапе управление осуществляется людьми из любой точки мира, требуется лишь стабильный интернет
     </div>
     <div>
-      Возможности:
+      На данный момент я собрал одного робота, им порулить пока не получится.
+      К весне нужно найти инвестиции штук на 10, чтобы можно было устроить робо-кооперацию
+    </div>
+    <br />
+    <div>
+      Рассматриваю любые виды взаимодействия или интеграций. Собираю коммьюнити людей, которым нравятся роботы
+    </div>
+    <br />
+    <div>
+      На этом ресурсе представлено описание проекта, а так же детальные инструкции (с картинками) по самостоятельной сборке (раздел Wiki слева)<br />
+      (<a href="https://vk.com/jeeroway" target="_blank">Официальная группа вк</a>) (есть <a href="https://vk.com/im?sel=c151">чат</a>)<br />
+      (помощь проекту мне в личку)<br />
+      (пожелания и предложения можно <a href="mailto:phoenix_net@bk.ru">отправить на почту</a>)
+    </div>
+    <br />
+    <div>
+      <h4>Возможности:</h4>
       <ul>
-        <li>Можно порулить реальным роботом на незаконной свалке и очистить нашу планету</li>
+        <li>Можно порулить реальным роботом на незаконной свалке или замусоренном пляже и очистить нашу планету от мусора</li>
         <li>Можно поставить робота на дачу и помочь бабушке прополоть грядки от сорняков</li>
         <li>Можно поставить робота дома и с работы проверить, выключен ли утюг (и даже вытащить вилку из розетки)</li>
         <li>Можно поставить развлекательный стенд вашей организации на любой конференции</li>
         <li>Можно сделать настоящую игру, гонки или танковые бои на реальных роботах</li>
+        <li>Игры с котиками</li>
+      </ul>
+    </div>
+  </section>
+
+  <section>
+    <div>
+      <h4>Назначение</h4>
+      Гусеничный робот предназначен для перемещения небольших грузов. Управление осуществляется оператором (пользователем) через терминал (компьютер) с использованием сети интернет
+    </div>
+
+    <div>
+      <h4>Описание</h4>
+      Робот представляет из себя гусеничную платформу. Имеет руку-манипулятор для захвата предметов. Присутствует камера для передачи изображения. Имеется батарея для автономной работы.
+      Перед начаом использования оператор регистрируется на платформе по управлению (ссылка), там же регистрирует своего робота для возможности установления связи и непосредственного управления.
+    </div>
+
+    <div>
+      <h4>Требования и ограничения</h4>
+      Наличие WiFi сети с подключением к интернету или доступность мобильной 3G/4G/5G связи
+    </div>
+
+    <div>
+      <h4>Внешний вид</h4>
+      (карусель с картинками)
+    </div>
+
+    <div>
+      <h4>Технические характеристики</h4>
+      <ul>
+        <li>
+          габариты ДШВ: : 50х25х40 см (замерить)
+        </li>
+        <li>
+          вес: 2кг (замерить)
+        </li>
+        <li>
+          автономный запас хода: 4ч (замерить)
+        </li>
       </ul>
     </div>
   </section>
