--- a/src/Jeeroway.Web/web/src/app/wiki/rpi-install/rpi-install.component.html
+++ b/src/Jeeroway.Web/web/src/app/wiki/rpi-install/rpi-install.component.html
@@ -43,37 +43,37 @@
     <h5>Установка необходимого дополнительного программного обеспечения</h5>
     <p>
       Практически все команды выполняются на линуксе (Raspbian - это линукс) в терминале. Если у вас десктопная версия, то терминал можно запустить из меню пуск, либо горячими клавишами (погуглите, вроде, ctrl+t)<br />
-      <SurveyPrompt Title="Поставить обновления на операционную систему" Text="sudo apt-get update" />
-      <SurveyPrompt Title="Узнать текущий IP адрес малины внутри домашней сети:" Text="hostname –I" />
-      <SurveyPrompt Title="В первую очередь нам понадобится git, через него будем загружать исходный код проекта Jeeroway:" Text="sudo apt-get install git " />
-      <SurveyPrompt Title="Чтобы запустить код проекта нам понадобится node js. А чтобы его поставить, необходимо вначале задать ссылку:" Text="curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -" />
-      <SurveyPrompt Title="Далее установка node js" Text="sudo apt-get install -y nodejs" />
-      <SurveyPrompt Title="Можем проверить текущую версию ноды:" Text="node –v" />
-      <SurveyPrompt Title="Так же проверить версию пакетного менеджера (ставится вместе с нодой)" Text="npm -v" />
-      <SurveyPrompt Title="Создать папку в текущем каталоге пользователя" Text="mrdir app " />
-      <SurveyPrompt Title="Зайти в эту папку" Text="cd app" />
-      <SurveyPrompt Title="Закачиваем исходный код проекта Jeeroway (ссылка поменяется)" Text="git clone https://jeer.visualstudio.com/testNode/_git/testNode " />
-      <SurveyPrompt Title="Посмотреть все файлы в текущей папке (смотреть в каждой папке)" Text="ls" />
-      <SurveyPrompt Title="Переходим во вложенные папки к исполняемым файлам" Text="cd testNode/" />
-      <SurveyPrompt Title="Ещё ниже" Text="cd nodeTest/" />
+      <app-survey-prompt [title]="'Поставить обновления на операционную систему'" [text]="'sudo apt-get update'" />
+      <app-survey-prompt [title]="'Узнать текущий IP адрес малины внутри домашней сети:'" [text]="'hostname –I'" />
+      <app-survey-prompt [title]="'В первую очередь нам понадобится git, через него будем загружать исходный код проекта Jeeroway:'" [text]="'sudo apt-get install git '" />
+      <app-survey-prompt [title]="'Чтобы запустить код проекта нам понадобится node js. А чтобы его поставить, необходимо вначале задать ссылку:'" [text]="'curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -'" />
+      <app-survey-prompt [title]="'Далее установка node js'" [text]="'sudo apt-get install -y nodejs'" />
+      <app-survey-prompt [title]="'Можем проверить текущую версию ноды:'" [text]="'node –v'" />
+      <app-survey-prompt [title]="'Так же проверить версию пакетного менеджера (ставится вместе с нодой)'" [text]="'npm -v'" />
+      <app-survey-prompt [title]="'Создать папку в текущем каталоге пользователя'" [text]="'mrdir app '" />
+      <app-survey-prompt [title]="'Зайти в эту папку'" [text]="'cd app'" />
+      <app-survey-prompt [title]="'Закачиваем исходный код проекта Jeeroway (ссылка поменяется)'" [text]="'git clone https://jeer.visualstudio.com/testNode/_git/testNode '" />
+      <app-survey-prompt [title]="'Посмотреть все файлы в текущей папке (смотреть в каждой папке)'" [text]="'ls'" />
+      <app-survey-prompt [title]="'Переходим во вложенные папки к исполняемым файлам'" [text]="'cd testNode/'" />
+      <app-survey-prompt [title]="'Ещё ниже'" [text]="'cd nodeTest/'" />
       В папке nodeTest должен располагаться файл package.json и другие исполняемые файлы (видно через команду ls)
-      <SurveyPrompt Title="Обновим npm пакеты" Text="npm i" />
-      <SurveyPrompt Title="Установим пакет raspi" Text="npm i raspi " />
-      <SurveyPrompt Title="Установим пакет raspi-serial" Text="npm i raspi-serial" />
-      <SurveyPrompt Title="Запускаем наше приложение вручную для проверки работоспособности" Text="node app.js" />
+      <app-survey-prompt [title]="'Обновим npm пакеты'" [text]="'npm i'" />
+      <app-survey-prompt [title]="'Установим пакет raspi'" [text]="'npm i raspi '" />
+      <app-survey-prompt [title]="'Установим пакет raspi-serial'" [text]="'npm i raspi-serial'" />
+      <app-survey-prompt [title]="'Запускаем наше приложение вручную для проверки работоспособности'" [text]="'node app.js'" />
       Сервер node js с приложением Jeeroway запускается на порту 5000. Вбиваем в интернет-проводнике localhost:5000, должен отобразиться наш проект, если всё запущено правильно
     </p>
     <div>
       <h5>Поставим проект Jeeroway в автозагрузку. Чтобы нода запускалась при загрузке raspberry pi</h5>
-      <SurveyPrompt Title="Устанавливаем автозагрузчик pm2" Text="sudo npm install pm2 –g " />
-      <SurveyPrompt Title="Добавляем проект Jeeroway в pm2" Text="pm2 start app.js " />
-      <SurveyPrompt Title="Далее необходимо прописать автозагрузку" Text="pm2 startup ubuntu " />
-      <SurveyPrompt Title="Полная команда от пользователя" Text="sudo env PATH=$PATH:/usr/bin /usr/lib/node_modules/pm2/bin/pm2 startup ubuntu -u pi --hp /home/p" />
-      <SurveyPrompt Title="Сохранение изменений" Text="pm2 save " />
-      <SurveyPrompt Title="Просмотр запускаемых проектов" Text="pm2 list " />
-      <SurveyPrompt Title="Просмотр состояния запущенных проектов" Text="pm2 monit" />
-      <SurveyPrompt Title="Остановка проекта по порядковому номеру" Text="pm2 stop 0 " />
-      <SurveyPrompt Title="Айпи адрес" Text="Ifconfig" />
+      <app-survey-prompt [title]="'Устанавливаем автозагрузчик pm2'" [text]="'sudo npm install pm2 –g '" />
+      <app-survey-prompt [title]="'Добавляем проект Jeeroway в pm2'" [text]="'pm2 start app.js '" />
+      <app-survey-prompt [title]="'Далее необходимо прописать автозагрузку'" [text]="'pm2 startup ubuntu '" />
+      <app-survey-prompt [title]="'Полная команда от пользователя'" [text]="'sudo env PATH=$PATH:/usr/bin /usr/lib/node_modules/pm2/bin/pm2 startup ubuntu -u pi --hp /home/p'" />
+      <app-survey-prompt [title]="'Сохранение изменений'" [text]="'pm2 save '" />
+      <app-survey-prompt [title]="'Просмотр запускаемых проектов'" [text]="'pm2 list '" />
+      <app-survey-prompt [title]="'Просмотр состояния запущенных проектов'" [text]="'pm2 monit'" />
+      <app-survey-prompt [title]="'Остановка проекта по порядковому номеру'" [text]="'pm2 stop 0 '" />
+      <app-survey-prompt [title]="'Айпи адрес'" [text]="'Ifconfig'" />
     </div>
   </div>
 </div>
